// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-link spec: Render logic -> should render a link by default 1`] = `
<amplify-link>
  <mock:shadow-root>
    <a class="link" role="navigation">
      <slot></slot>
    </a>
  </mock:shadow-root>
</amplify-link>
`;

exports[`amplify-link spec: Render logic -> should render only class \`amplify-ui--link\` when override style is set to true 1`] = `
<amplify-link override-style="true">
  <mock:shadow-root>
    <a class="link" role="navigation">
      <slot></slot>
    </a>
  </mock:shadow-root>
</amplify-link>
`;
